--- a/gtk2/menubar-toolbar/menubar-toolbar.rc
+++ b/gtk2/menubar-toolbar/menubar-toolbar.rc
@@ -1,11 +1,11 @@
 style "menubar" {
 
-  bg[NORMAL] = "#121212"
-  fg[NORMAL] = "#9e9e9e"
-  fg[PRELIGHT] = "#616161"
-  fg[ACTIVE] = "#616161"
+  bg[NORMAL] = @bg_color
+  fg[NORMAL] = @fg_color
+  fg[PRELIGHT] = @sec_fg_color
+  fg[ACTIVE] = @sec_fg_color
   fg[SELECTED] = @selected_fg_color
-  fg[INSENSITIVE] = shade(0.7, "#616161")
+  fg[INSENSITIVE] = shade(0.7, @sec_fg_color)
 
   xthickness = 0
   ythickness = 0
@@ -23,10 +23,10 @@ style "menubar" {
 
 style "menubar-borderless" {
 
-  bg[NORMAL] = "#121212"
-  fg[NORMAL] = "#616161"
+  bg[NORMAL] = @bg_color
+  fg[NORMAL] = @sec_fg_color
   fg[SELECTED] = @selected_fg_color
-  fg[INSENSITIVE] = shade(0.7, "#616161")
+  fg[INSENSITIVE] = shade(0.7, @sec_fg_color)
 
   xthickness = 0
   ythickness = 0
@@ -72,15 +72,15 @@ style "menubar-text" {
 
 
 style "toolbar_text" {
-  fg[NORMAL] = "#616161"
-  fg[PRELIGHT] = "#616161"
-  fg[INSENSITIVE] = shade(0.7, "#616161")
-  fg[ACTIVE] = "#616161"
+  fg[NORMAL] = @sec_fg_color
+  fg[PRELIGHT] = @sec_fg_color
+  fg[INSENSITIVE] = shade(0.7, @sec_fg_color)
+  fg[ACTIVE] = @sec_fg_color
 
-  text[NORMAL] = "#616161"
-  text[PRELIGHT] = "#616161"
-  text[INSENSITIVE] = shade(0.7, "#616161")
-  text[ACTIVE] = "#616161"
+  text[NORMAL] = @sec_fg_color
+  text[PRELIGHT] = @sec_fg_color
+  text[INSENSITIVE] = shade(0.7, @sec_fg_color)
+  text[ACTIVE] = @sec_fg_color
 
 }
 
@@ -127,11 +127,11 @@ style "toolbar_button" {
 
 style "toolbar_entry" {
 
-  base[NORMAL] = "#121212"
-  base[ACTIVE] = "#121212"
-  base[INSENSITIVE] = "#121212"
+  base[NORMAL] = @bg_color
+  base[ACTIVE] = @bg_color
+  base[INSENSITIVE] = @bg_color
 
-  text[NORMAL] = "#616161"
+  text[NORMAL] = @sec_fg_color
 
   engine "pixmap" {
 
@@ -187,8 +187,8 @@ style "toolbar_entry" {
 #Chromium
 style "chrome-gtk-frame" {
 
-  ChromeGtkFrame::frame-color = "#121212"
-  ChromeGtkFrame::inactive-frame-color = "#121212"
+  ChromeGtkFrame::frame-color = @bg_color
+  ChromeGtkFrame::inactive-frame-color = @bg_color
 
   ChromeGtkFrame::frame-gradient-size = 0
   ChromeGtkFrame::frame-gradient-color = shade(0.5, @bg_color)
