--- a/gtk2/main.rc
+++ b/gtk2/main.rc
@@ -2205,8 +2205,9 @@ style "xfdesktop-icon-view" {
   XfdesktopIconView::cell-padding = 6
   XfdesktopIconView::cell-text-width-proportion = 1.9
 
-  fg[NORMAL] = @selected_fg_color
-  fg[ACTIVE] = @selected_fg_color
+  fg[NORMAL] = @fg_color
+  fg[ACTIVE] = @fg_color
+  fg[SELECTED] = @fg_color
 }
 
 style "xfwm-tabwin" {
